[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/test_stage.gd" type="Script" id=1]
[ext_resource path="res://sprites/test_stage_sub_platform.png" type="Texture" id=2]
[ext_resource path="res://sprites/test_stage_main_platform.png" type="Texture" id=3]
[ext_resource path="res://sprites/test_stage_background.png" type="Texture" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/console.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/pause_screen.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/font_resources/pixelart.ttf" type="DynamicFontData" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 8 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 5
outline_color = Color( 0, 0.00392157, 1, 1 )
font_data = ExtResource( 9 )

[node name="TestStage" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -1278.0
margin_top = -1279.0
margin_right = 1282.0
margin_bottom = 1281.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="Node2D" parent="."]

[node name="MainPlatform" type="StaticBody2D" parent="Platforms"]
position = Vector2( 640, 430 )

[node name="Sprite" type="Sprite" parent="Platforms/MainPlatform"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/MainPlatform"]
shape = SubResource( 1 )

[node name="SubPlatform1" type="StaticBody2D" parent="Platforms"]
position = Vector2( 320, 250 )

[node name="Sprite" type="Sprite" parent="Platforms/SubPlatform1"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/SubPlatform1"]
shape = SubResource( 2 )
one_way_collision = true

[node name="SubPlatform2" type="StaticBody2D" parent="Platforms"]
position = Vector2( 960, 250 )

[node name="Sprite" type="Sprite" parent="Platforms/SubPlatform2"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/SubPlatform2"]
shape = SubResource( 2 )
one_way_collision = true

[node name="DamageCounter1" type="Label" parent="."]
margin_top = 494.0
margin_right = 231.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -628, -144 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageCounter2" type="Label" parent="."]
margin_left = 1051.0
margin_top = 494.0
margin_right = 1282.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -628, -144 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 569, 295 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 695, 292 )
player_num = 1

[node name="Console" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, 420 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
pause_mode = 0
visible = false
script = null

[node name="Pause" parent="." instance=ExtResource( 8 )]
visible = false
